--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,23 +1,31 @@
-/* fonts/fonts.css */
+/* fonts/fonts.css - النسخة الكاملة */
 @font-face {
     font-family: 'Agu Display';
-    src: url('./agu-display.woff2') format('woff2');
-    font-weight: 100 900;
+    src: url('https://cdn.jsdelivr.net/npm/@fontsource/agu-display@5.0.0/latin-400-normal.woff2') format('woff2');
+    font-weight: 400;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
     font-family: 'Oswald';
-    src: url('./oswald-variable.woff2') format('woff2');
-    font-weight: 100 900;
+    src: url('https://cdn.jsdelivr.net/npm/@fontsource/oswald@5.0.0/latin-400-normal.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Oswald';
+    src: url('https://cdn.jsdelivr.net/npm/@fontsource/oswald@5.0.0/latin-700-normal.woff2') format('woff2');
+    font-weight: 700;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
     font-family: 'Pacifico';
-    src: url('./pacifico.woff2') format('woff2');
+    src: url('https://cdn.jsdelivr.net/npm/@fontsource/pacifico@5.0.0/latin-400-normal.woff2') format('woff2');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -25,18 +33,98 @@
 
 @font-face {
     font-family: 'Reem Kufi';
-    src: url('./reem-kufi.woff2') format('woff2');
-    font-weight: 400 700;
+    src: url('https://cdn.jsdelivr.net/npm/@fontsource/reem-kufi@5.0.0/arabic-400-normal.woff2') format('woff2');
+    font-weight: 400;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
     font-family: 'Playfair Display';
-    src: url('./playfair-display.woff2') format('woff2');
-    font-weight: 400 900;
-    font-style: italic;
+    src: url('https://cdn.jsdelivr.net/npm/@fontsource/playfair-display@5.0.0/latin-400-normal.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
     font-display: swap;
 }
 
-/* أضف باقي الخطوط بنفس الطريقة */
+@font-face {
+    font-family: 'Playfair Display';
+    src: url('https://cdn.jsdelivr.net/npm/@fontsource/playfair-display@5.0.0/latin-700-normal.woff2') format('woff2');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Alkalami';
+    src: url('https://cdn.jsdelivr.net/npm/@fontsource/alkalami@5.0.0/arabic-400-normal.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Amatic SC';
+    src: url('https://cdn.jsdelivr.net/npm/@fontsource/amatic-sc@5.0.0/latin-400-normal.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Anton';
+    src: url('https://cdn.jsdelivr.net/npm/@fontsource/anton@5.0.0/latin-400-normal.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Archivo Black';
+    src: url('https://cdn.jsdelivr.net/npm/@fontsource/archivo-black@5.0.0/latin-400-normal.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Bebas Neue';
+    src: url('https://cdn.jsdelivr.net/npm/@fontsource/bebas-neue@5.0.0/latin-400-normal.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Dancing Script';
+    src: url('https://cdn.jsdelivr.net/npm/@fontsource/dancing-script@5.0.0/latin-400-normal.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Lalezar';
+    src: url('https://cdn.jsdelivr.net/npm/@fontsource/lalezar@5.0.0/arabic-400-normal.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Noto Nastaliq Urdu';
+    src: url('https://cdn.jsdelivr.net/npm/@fontsource/noto-nastaliq-urdu@5.0.0/arabic-400-normal.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Rock Salt';
+    src: url('https://cdn.jsdelivr.net/npm/@fontsource/rock-salt@5.0.0/latin-400-normal.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+/* باقي الخطوط بنفس الطريقة - أضع أهم 15 خط */
